--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "grunt": "~0.4",
-    "grunt-contrib-jshint": "~0.8"
+    "grunt-contrib-jshint": "~0.8",
+    "grunt-jscs": "~0.6.1",
+    "jscs-trailing-whitespace-in-source": "0.0.1"
   }
 }
