--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "test": "true"
   },
   "dependencies": {
-    "fs-extra": "~0.10",
-    "q": "~1.0",
+    "fs-extra": "~5",
+    "q": "~1",
     "tmp": "~0.0.24"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10",
-    "grunt-jscs": "~0.6.1",
-    "jscs-trailing-whitespace-in-source": "0.0.1"
+    "grunt": "~1",
+    "grunt-contrib-jshint": "~1.1",
+    "grunt-jscs": "~3",
+    "jscs-trailing-whitespace-in-source": "latest"
   }
 }
